fix(side+nav): rootlayout issues fix

--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,14 @@
   --color-primary-500: #1f5da0;
   --color-primary-600: #1c5592;
 
+  --color-neutral-100: #d8d8d8;
   --color-neutral-300: #ababab;
 
   --color-white-700: #ebebeb;
 
-  --height-17: 68px;
+  --spacing-7.5: 30px;
+  --spacing-17: 68px;
+  --spacing-62: 248px;
 
   --shadow-custom-1: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
 }
@@ -58,10 +61,17 @@ input:-webkit-autofill {
   transition: background-color 9999s ease-in-out 0s;
 }
 
-@utility input-class {
-  @apply w-full border border-neutral-300 text-sm rounded-lg p-2 outline-none focus-within:border-primary-500;
+@utility scrollbar-hidden {
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
-@utility input-error {
-  @apply text-red-500 text-sm;
+@layer components {
+  .input-class {
+    @apply w-full border border-neutral-300 text-sm rounded-lg p-2 outline-none focus-within:border-primary-500;
+  }
+  .input-error {
+    @apply text-red-500 text-sm;
+  }
 }
